--- a/server/package.json
+++ b/server/package.json
@@ -3,21 +3,22 @@
   "type": "module",
   "version": "0.1.0",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
-    "test": "NODE_ENV=test jest --runInBand"
-  },
+  "dev": "nodemon src/index.js",
+  "start": "node src/index.js",
+  "test": "NODE_ENV=test jest --runInBand"
+},
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
-    "morgan": "^1.10.0",
-    "joi": "^17.12.3"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "gulp-nodemon": "^2.5.0",
     "nodemon": "^3.1.0"
   }
 }
